# diself

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: bot.rs  cache_example.rs
src/: error.rs  lib.rs
src/cache/: cache.rs
src/client/: builder.rs  client.rs  context.rs  event_handler.rs  events.rs  managers.rs  mod.rs
src/gateway/: connection.rs  gateway.rs  mod.rs
src/http/: client.rs
src/model/: channel.rs  embed_builder.rs  gateway_state.rs  guild.rs  message.rs  message_builder.rs  mod.rs  user.rs
tests/: cache_behavior.rs  endpoints_live.rs
