[package]
name = "diself"
version = "0.2.4"
edition = "2021"
authors = ["daniilsys"]
license = "MIT"
repository = "https://github.com/daniilsys/diself"
documentation = "https://docs.rs/diself"
description = "A Discord self-bot library for Rust"
keywords = ["discord", "selfbot", "api", "async"]
categories = ["api-bindings", "asynchronous"]


[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
base64 = "0.22"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2.4"
futures-util = "0.3"
rand = "0.8"

# Async trait (pour EventHandler)
async-trait = "0.1"

# Concurrency
dashmap = "5.5"       # Pour le cache thread-safe
parking_lot = "0.12"  # Mutex/RwLock plus rapides
urlencoding = "2.1.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
pretty_assertions = "1.4"

[features]
default = ["cache", "gateway"]
cache = []
gateway = []
voice = []                     # Pour plus tard
